.jjconflict-side-1/apps/vaultwarden/base/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vaultwarden
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tailscale-system
      ports:
        - port: http
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: vaultwarden
      app.kubernetes.io/name: vaultwarden
  policyTypes:
    - Ingress
